test/autotests/inspect/parse-error/input.js
const thing = {;
require('foo');

if (require('bar')) {
    require('baz');
}
